--- a/BookNGo/Views/Home/Index.cshtml
+++ b/BookNGo/Views/Home/Index.cshtml
@@ -6,34 +6,36 @@
 
 @using (Html.BeginForm("Index", "Home", FormMethod.Get))
 {
-    <form>
-        <h2>Search for houses</h2>
-        <hr />
-
-        <div class="form-group">
-            @Html.Label("startDate", "Arrival:")
-            @Html.TextBox("startDate", "", new { @class = "form-control", type = "date" })
-        </div>
-        <div class="form-group">
-            @Html.Label("endDate", "Departure:")
-            @Html.TextBox("endDate", "", new { @class = "form-control", type = "date" })
-        </div>
-        <div class="form-group">
-            @Html.Label("location", "Location:")
-            @Html.DropDownList("location", (SelectList)ViewBag.Location, "Select your location", htmlAttributes: new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.Label("category", "Category:")
-            @Html.DropDownList("category", (SelectList)ViewBag.Category, "Select a category", htmlAttributes: new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.Label("visitors", "Visitors:")
-            @Html.TextBox("occupancy", "", new { @class = "form-control", placeholder = "Number of visitors" })
-        </div>
-        <div class="form-group">
-            <input type="submit" value="Find your house" class="btn btn-primary" />
-        </div>
-    </form>
+<form>
+    <h2>Search for houses</h2>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="form-group">
+        @Html.Label("startDate", "Arrival:")
+        @Html.TextBox("startDate", "", new { @class = "form-control", type = "date" })
+        @Html.ValidationMessage("startDate", "", new { @class = "text-danger" })
+    </div>
+    <div class="form-group">
+        @Html.Label("endDate", "Departure:")
+        @Html.TextBox("endDate", "", new { @class = "form-control", type = "date" })
+        @Html.ValidationMessage("endDate", "", new { @class = "text-danger" })
+    </div>
+    <div class="form-group">
+        @Html.Label("location", "Location:")
+        @Html.DropDownList("location", (SelectList)ViewBag.Location, "Select your location", htmlAttributes: new { @class = "form-control" })
+    </div>
+    <div class="form-group">
+        @Html.Label("category", "Category:")
+        @Html.DropDownList("category", (SelectList)ViewBag.Category, "Select a category", htmlAttributes: new { @class = "form-control" })
+    </div>
+    <div class="form-group">
+        @Html.Label("visitors", "Visitors:")
+        @Html.TextBox("occupancy", "", new { @class = "form-control", placeholder = "Number of visitors" })
+    </div>
+    <div class="form-group">
+        <input type="submit" value="Find your house" class="btn btn-primary" />
+    </div>
+</form>
 }
 
 <table class="table">
