--- a/BookNGo/Views/Reservations/BookIt.cshtml
+++ b/BookNGo/Views/Reservations/BookIt.cshtml
@@ -5,7 +5,6 @@
 }
 
 <h2>Create</h2>
-@ViewBag.House.Title
 @{
     TempData["House"] = ViewBag.House;
 }
@@ -21,8 +20,11 @@
         <div class="form-group">
             @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { @class = "form-control", type = "date" }})
-                @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { @class = "form-control", type = "date" } })
+                @if (ViewData.ModelState["startDate"] != null && ViewData.ModelState["startDate"].Errors.Count > 0)
+                {
+                    @ViewData.ModelState["startDate"].Errors[0].ErrorMessage
+                }
             </div>
         </div>
 
@@ -30,7 +32,10 @@
             @Html.LabelFor(model => model.EndDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.EndDate, new { htmlAttributes = new { @class = "form-control", type = "date" } })
-                @Html.ValidationMessageFor(model => model.EndDate, "", new { @class = "text-danger" })
+                @if (ViewData.ModelState["endDate"] != null && ViewData.ModelState["endDate"].Errors.Count > 0)
+                {
+                    @ViewData.ModelState["endDate"].Errors[0].ErrorMessage
+                }
             </div>
         </div>
 
@@ -51,7 +56,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to My Reservation", "MyReservations", "Reservations")
 </div>
 
 @section Scripts {
