--- a/BookNGo/Views/Reservations/BookIt.cshtml
+++ b/BookNGo/Views/Reservations/BookIt.cshtml
@@ -21,10 +21,7 @@
             @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { @class = "form-control", type = "date" } })
-                @if (ViewData.ModelState["startDate"] != null && ViewData.ModelState["startDate"].Errors.Count > 0)
-                {
-                    @ViewData.ModelState["startDate"].Errors[0].ErrorMessage
-                }
+                @Html.ValidationMessage("startDate", "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -32,10 +29,7 @@
             @Html.LabelFor(model => model.EndDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.EndDate, new { htmlAttributes = new { @class = "form-control", type = "date" } })
-                @if (ViewData.ModelState["endDate"] != null && ViewData.ModelState["endDate"].Errors.Count > 0)
-                {
-                    @ViewData.ModelState["endDate"].Errors[0].ErrorMessage
-                }
+                @Html.ValidationMessage("endDate", "", new { @class = "text-danger" })
             </div>
         </div>
 
