--- a/BookNGo/Views/Houses/Delete.cshtml
+++ b/BookNGo/Views/Houses/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model BookNGo.Models.House
+﻿@model BookNGo.ViewModels.HouseModel
 
 @{
     ViewBag.Title = "Delete";
@@ -12,56 +12,57 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Title)
+            @Html.DisplayNameFor(model => model.House.Title)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Title)
+            @Html.DisplayFor(model => model.House.Title)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.House.Description)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Description)
+            @Html.DisplayFor(model => model.House.Description)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Address)
+            @Html.DisplayNameFor(model => model.House.Address)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Address)
+            @Html.DisplayFor(model => model.House.Address)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.MaxOccupancy)
+            @Html.DisplayNameFor(model => model.House.MaxOccupancy)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.MaxOccupancy)
+            @Html.DisplayFor(model => model.House.MaxOccupancy)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.PricePerNight)
+            @Html.DisplayNameFor(model => model.House.PricePerNight)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.PricePerNight)
+            @Html.DisplayFor(model => model.House.PricePerNight)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.LocationId)
+            @Html.DisplayNameFor(model => model.House.LocationId)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.LocationId)
+            @Html.DisplayFor(model => model.House.LocationId)
         </dd>
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
