--- a/BookNGo/Views/Shared/_Layout.cshtml
+++ b/BookNGo/Views/Shared/_Layout.cshtml
@@ -28,10 +28,10 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    @*@if (User.Identity.IsAuthenticated)
-                    {*@
+                    @if (Request.IsAuthenticated && User.IsInRole("Owner"))
+                    {
                         <li>@Html.ActionLink("Admin Page", "AdminPage", "Home")</li>
-                    @*}*@
+                    }
                     </ul>
                 @Html.Partial("_LoginPartial")
             </div>
