--- a/BookNGo/Views/Shared/_Layout.cshtml
+++ b/BookNGo/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    @if (Request.IsAuthenticated && User.IsInRole("Owner"))
+                    @if(User.IsInRole("Admin"))
                     {
                         <li>@Html.ActionLink("Admin Page", "AdminPage", "Home")</li>
                     }
