--- a/BookNGo/Views/Users/Details.cshtml
+++ b/BookNGo/Views/Users/Details.cshtml
@@ -76,11 +76,17 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit Account", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Delete Account", "Delete", new { id = Model.Id }) |
-    @Html.ActionLink("My House", "MyHouses", "Houses") |
-    @Html.ActionLink("My Reservation", "MyReservations", "Reservations") |
-    @Html.ActionLink("My House Reservation", "MyHouseReservations", "Reservations") |
-    @Html.ActionLink("New House", "Create", "Houses") |
+    @Html.ActionLink("Edit Account", "Edit", new { id = Model.Id })
+    @Html.ActionLink("Delete Account", "Delete", new { id = Model.Id })
+    @if (User.IsInRole("Owner"))
+    {
+        @Html.ActionLink("My House", "MyHouses", "Houses")
+    }
+    @Html.ActionLink("My Reservation", "MyReservations", "Reservations")
+    @if (User.IsInRole("Owner"))
+    {
+        @Html.ActionLink("My House Reservation", "MyHouseReservations", "Reservations")
+    }
+    @Html.ActionLink("New House", "Create", "Houses")
     @Html.ActionLink("Change your password", "ChangePassword", "Manage")
 </p>
