--- a/BookNGo/Views/Reservations/BookIt.cshtml
+++ b/BookNGo/Views/Reservations/BookIt.cshtml
@@ -40,7 +40,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
                 @Html.LabelFor(model => model.PriceCharged, htmlAttributes: new { @class = "control-label col-md-2 magnify-label-sm" })
                 <div class="col-md-10">
                     @{ 
@@ -51,7 +51,7 @@
                     @Html.Label(@priceShow, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.PriceCharged, "", new { @class = "text-danger" })
                 </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
