--- a/BookNGo/Views/Houses/MyHouses.cshtml
+++ b/BookNGo/Views/Houses/MyHouses.cshtml
@@ -8,7 +8,7 @@
 
 <p>
     @Html.ActionLink("Add House", "Create", "House", new { @class = "btn btn-primary" })
-    @if (User.IsInRole("Admin, Owner"))
+    @if (User.IsInRole("Admin") || User.IsInRole("Owner"))
     {
         @Html.ActionLink("Reservations", "MyHousesReservations", "Reservations", null, new { @class = "btn btn-success" })
     }
